# OTA-project-virtual-ECU

./: README.md
build_test/: CMakeLists.txt  client.cpp  doip_server.hpp  doip_session.hpp  ecdsa_verifier.hpp  ecu_state.hpp  main.cpp
vECU_project/: CMakeLists.txt  client.cpp  doip_session.hpp  dtc_manager.hpp  ecu_state.hpp  generate_keys.sh  main.cpp  nvram_manager.hpp
